--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="org.techtown.letseat">
+
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.hardware.camera.autofocus" />
+
     <uses-feature android:name="android.hardware.camera" />
 
     <application
@@ -14,13 +16,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LetsEat">
-        <activity android:name=".RegisterActivity"></activity>
+        <activity
+            android:name=".MenuActivity"
+            android:exported="true" />
+        <activity android:name=".RegisterActivity" />
         <activity
             android:name=".Login"
             android:exported="true" />
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -30,4 +36,5 @@
             android:screenOrientation="portrait"
             tools:replace="screenOrientation" />
     </application>
+
 </manifest>
