--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,15 +16,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LetsEat">
+        <activity android:name=".menu_sample"></activity>
         <activity
-            android:name=".MenuActivity"
+            android:name=".menu.MenuActivity"
             android:exported="true" />
-        <activity android:name=".RegisterActivity" />
+        <activity android:name=".login.RegisterActivity" />
         <activity
-            android:name=".restaurant_info"
+            android:name=".restaurant.restaurant_info"
             android:exported="true" />
         <activity
-            android:name=".Login"
+            android:name=".login.Login"
             android:exported="true" />
         <activity android:name=".SplashActivity">
             <intent-filter>
