--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LetsEat">
+        <activity android:name=".Rest_List">
+        </activity>
         <activity
             android:name=".MenuActivity"
             android:exported="true" />
