--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LetsEat">
-        <activity android:name=".menu_sample"></activity>
-        <activity android:name=".Rest_List">
-        </activity>
+        <activity android:name=".photo.PhotoList"></activity>
+        <activity android:name=".menu_sample" />
+        <activity android:name=".Rest_List"></activity>
         <activity
             android:name=".MenuActivity"
             android:exported="true" />
