주문 내역 / 마이 / 사진 탭 작업중

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             android:name=".ReviewActivity"
             android:exported="true" />
         <activity
-            android:name=".OrderActivity"
+            android:name=".order.OrderActivity"
             android:exported="true" />
         <activity android:name=".menu_sample" />
         <activity android:name=".Rest_List" />
