주문 내역 / 마이 / 사진 탭 작업중

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,20 +28,16 @@
         <activity android:name=".menu.menu_sample" />
         <activity android:name=".restaurant.Rest_List" />
         <activity android:name=".photo.PhotoList"></activity>
-        <activity android:name=".menu.menu_sample" />
-        <activity android:name=".restaurant.Rest_List"></activity>
         <activity
             android:name=".ReviewActivity"
             android:exported="true" />
         <activity
             android:name=".order.OrderActivity"
             android:exported="true" />
-        <activity android:name=".menu_sample" />
-        <activity android:name=".Rest_List" />
         <activity
-            android:name=".MenuActivity"
+            android:name=".menu.MenuActivity"
             android:exported="true" />
-        <activity android:name=".RegisterActivity" />
+        <activity android:name=".login.RegisterActivity" />
         <activity
             android:name=".restaurant.restaurant_info"
             android:exported="true" />
