--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:name=".mytab.MyTab"
             android:exported="true" />
         <activity android:name=".menu.menu_sample" />
-        <activity android:name=".restaurant.Rest_List" />
+        <activity android:name=".restaurant.list.RestListMain" />
         <activity android:name=".photo.PhotoList"></activity>
         <activity
             android:name=".ReviewActivity"
@@ -39,7 +39,7 @@
             android:exported="true" />
         <activity android:name=".login.RegisterActivity" />
         <activity
-            android:name=".restaurant.restaurant_info"
+            android:name=".restaurant.info.RestInfoMain"
             android:exported="true" />
         <activity
             android:name=".login.Login"
