--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,11 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.hardware.camera.autofocus" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <uses-feature android:name="android.hardware.camera" />
+
 
     <application
         android:allowBackup="true"
@@ -15,7 +18,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".KakaoSDKInit"
         android:theme="@style/Theme.LetsEat">
+
+        <meta-data
+            android:name="com.kakao.sdk.AppKey"
+            android:value="d8aeb3d2d3af0540824e12d6ba383ba4" />
+
         <activity
             android:name=".mytab.information_fix"
             android:exported="true" />
