--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,14 @@
 
     <uses-feature android:name="android.hardware.camera" />
 
-
     <application
+        android:name=".KakaoSDKInit"
         android:allowBackup="true"
         android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".KakaoSDKInit"
         android:theme="@style/Theme.LetsEat">
 
         <meta-data
@@ -38,7 +37,7 @@
         <activity android:name=".restaurant.Rest_List" />
         <activity android:name=".photo.PhotoList" />
         <activity android:name=".restaurant.list.RestListMain" />
-        <activity android:name=".photo.PhotoList"></activity>
+        <activity android:name=".photo.PhotoList" />
         <activity
             android:name=".ReviewActivity"
             android:exported="true" />
