--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation group: 'com.kakao.sdk', name: 'kakaotalk', version: '1.30.0'
     implementation group: 'com.kakao.sdk', name: 'kakaolink', version: '1.30.0'
     implementation group: 'org.apache.httpcomponents', name: 'httpclient-android', version: '4.3.5.1'
+    implementation 'com.android.volley:volley:1.1.1'
     implementation('org.apache.httpcomponents:httpmime:4.3') {
         exclude module: "httpclient"
     }
