--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,10 @@ android {
 
 dependencies {
 
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.android.volley:volley:1.1.1'
+
+    implementation 'com.github.bootpay:client_android_java:3.2.47'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation 'com.github.bumptech.glide:glide:4.9.0'
