--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,13 +37,16 @@ android {
 
 dependencies {
 
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation files('libs/libDaumMapAndroid.jar')
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.android.volley:volley:1.1.1'
-
+    implementation 'com.yanzhenjie:permission:2.0.3'
     implementation 'com.github.bootpay:client_android_java:3.2.47'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
