--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ allprojects {
         jcenter() // Warning: this repository is going to shut down soon
         maven { url 'https://devrepo.kakao.com/nexus/content/groups/public/' }
         maven { url 'https://jitpack.io' }
+        maven { url 'https://navercorp.bintray.com/maps'}
     }
 }
 
