--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
 
 
     <application
+        android:usesCleartextTraffic="true"
         android:name=".KakaoSDKInit"
         android:allowBackup="true"
         android:hardwareAccelerated="true"
@@ -26,9 +27,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.LetsEat"
-        android:usesCleartextTraffic="true"
-        android:networkSecurityConfig="@xml/network_security_config">
+        android:theme="@style/Theme.LetsEat">
         <activity
             android:name=".Naver_map"
             android:exported="true" />
