--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,14 +29,14 @@
         android:theme="@style/Theme.LetsEat"
         android:usesCleartextTraffic="true">
         //android:networkSecurityConfig="@xml/network_security_config"
-        <activity
-            android:name=".map.Naver_map"
-            android:exported="true" />
 
 
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="d8aeb3d2d3af0540824e12d6ba383ba4" />
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDwi28qhFQzZBAfyCvLbkkPRG5zSEiGmHY"/>
 
         <uses-library
             android:name="org.apache.http.legacy"
@@ -53,7 +53,6 @@
             android:exported="true" />
         <activity android:name=".pay_test.PayActivity" />
         <activity android:name=".pay_test.Kakao_pay_test" />
-        <activity android:name=".menu.menu_sample" />
         <activity android:name=".restaurant.list.RestListMain" />
         <activity android:name=".photo.PhotoList" />
         <activity
@@ -62,15 +61,15 @@
         <activity
             android:name=".order.OrderActivity"
             android:exported="true" />
-        <activity
-            android:name=".menu.MenuActivity"
-            android:exported="true" />
         <activity android:name=".login.RegisterActivity" />
         <activity
             android:name=".restaurant.info.RestInfoMain"
             android:exported="true" />
         <activity
             android:name=".login.Login"
+            android:exported="true" />
+        <activity
+            android:name=".map.Map_MainActivity"
             android:exported="true" />
         <activity android:name=".SplashActivity">
             <intent-filter>
