--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,14 @@ android {
     }
     buildFeatures {
         viewBinding true
+        mlModelBinding true
     }
 
     useLibrary 'org.apache.http.legacy'
 
+    aaptOptions {
+        noCompress "tflite"
+    }
 }
 
 dependencies {
@@ -49,15 +53,25 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
+    implementation 'org.tensorflow:tensorflow-lite-support:0.1.0-rc1'
+    implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0-rc1'
+    implementation 'org.tensorflow:tensorflow-lite-gpu:2.3.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'com.journeyapps:zxing-android-embedded:4.1.0'
     implementation 'com.google.zxing:core:3.2.1'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
+    implementation 'org.tensorflow:tensorflow-lite:+'
+    implementation platform('com.google.firebase:firebase-bom:28.4.1')
+    implementation 'com.google.mlkit:image-labeling-custom:16.3.1'
+    implementation 'com.google.mlkit:linkfirebase:16.1.1'
+    implementation 'com.google.firebase:firebase-ml-modeldownloader'
+    implementation 'org.tensorflow:tensorflow-lite:2.3.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation group: 'com.kakao.sdk', name: 'usermgmt', version: '1.30.0'
@@ -68,5 +82,6 @@ dependencies {
     implementation('org.apache.httpcomponents:httpmime:4.3') {
         exclude module: "httpclient"
     }
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
 }
