리뷰사진 업로드 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,18 @@
         <activity
             android:name=".restaurant.list.RestList_KoreanFood"
             android:exported="true" />
+        <activity
+            android:name=".Review.ReviewActivity"
+            android:exported="true"/>
+        <activity
+            android:name=".Review.ReviewImage1"
+            android:exported="true"/>
+        <activity
+            android:name=".Review.ReviewImage2"
+            android:exported="true"/>
+        <activity
+            android:name=".Review.ReviewImage3"
+            android:exported="true"/>
 
         <meta-data
             android:name="com.kakao.sdk.AppKey"
@@ -69,7 +81,7 @@
         <activity android:name=".restaurant.list.RestListMain" />
         <activity android:name=".photo.PhotoList" />
         <activity
-            android:name=".ReviewActivity"
+            android:name=".Review.ReviewActivity"
             android:exported="true" />
         <activity
             android:name=".order.OrderActivity"
