--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,10 @@ android {
         }
     }
 
+    aaptOptions{
+        noCompress "tflite"
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -37,6 +41,7 @@ android {
 
 dependencies {
 
+    implementation 'org.tensorflow:tensorflow-lite:+'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation files('libs/libDaumMapAndroid.jar')
