--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
         android:theme="@style/Theme.LetsEat"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".qr_restActivity"
+            android:exported="true" />
+        <activity
             android:name=".restaurant.list.RestList_onemanFood"
             android:exported="true" />
         <activity
