--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,10 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.2.0-alpha06'
     implementation 'com.google.code.gson:gson:2.8.5'
+
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation files('libs/libDaumMapAndroid.jar')
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.yanzhenjie:permission:2.0.3'
