--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
-
     <uses-feature android:name="android.hardware.camera" />
-
-
 
     <application
         android:name=".KakaoSDKInit"
@@ -51,16 +48,16 @@
             android:exported="true" />
         <activity
             android:name=".Review.ReviewActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".Review.ReviewImage1"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".Review.ReviewImage2"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".Review.ReviewImage3"
-            android:exported="true"/>
+            android:exported="true" />
 
         <meta-data
             android:name="com.kakao.sdk.AppKey"
@@ -77,7 +74,7 @@
             android:name=".mytab.information_fix"
             android:exported="true" />
         <activity
-            android:name=".qr_restActivity"
+            android:name=".restaurant.qr.qr_restActivity"
             android:exported="true" />
         <activity
             android:name=".mytab.waiting_Layout"
